added stick and its constraint

--- a/html/backgroundLevel1.html
+++ b/html/backgroundLevel1.html
@@ -20,8 +20,14 @@
   <img id="layerBelow" src="elements/img/singleLayerBelow.png">
 </canvas>
 
+<canvas id="initialFinalPoint" style="position: absolute">
+  <img id="Newton0" src="elements/img/NewtonFrame000.png">
+  <img id="trophy" src="elements/img/trophy.png">
+</canvas>
+
 <script src="../js/backgroundBlue.js"></script>
 <script src="../js/wave.js"></script>
+<script src="../js/initialAndFinalPoint.js"></script>
 
 </body>
 
