--- a/verlets/html/main.html
+++ b/verlets/html/main.html
@@ -12,7 +12,7 @@
 	<script src="../js/utils/math.js"></script>
 	<script src="../js/utils/circlePointDrawable.js"></script>
 	<script src="../js/particle.js"></script>
-	<script src="../js/particles.js"></script>
+	<script src="../js/listOfParticles.js"></script>
 	<script src="../js/main.js"></script>
 	<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
 </body>
