--- a/verlets/html/verletstick.html
+++ b/verlets/html/verletstick.html
@@ -11,10 +11,12 @@
 	<script src="../js/utils/vector.js"></script>
 	<script src="../js/utils/math.js"></script>
 	<script src="../js/utils/circlePointDrawable.js"></script>
+	<script src="../js/utils/lineDrawable.js"></script>
 	<script src="../js/particle.js"></script>
-	<script src="../js/particles.js"></script>
-	<script src="../js/constraints/verletStick.js"></script>
+	<script src="../js/listOfParticles.js"></script>
+	<script src="../js/constraints/stickConstraints.js"></script>
 	<script src="../js/stick.js"></script>
+  <script src="../js/drawVerletStick.js"></script>
 	<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
 </body>
 </html>
