adding lock constraint

--- a/verlets/html/verletstick.html
+++ b/verlets/html/verletstick.html
@@ -15,6 +15,7 @@
 	<script src="../js/particle.js"></script>
 	<script src="../js/listOfParticles.js"></script>
 	<script src="../js/constraints/stickConstraints.js"></script>
+	<script src="../js/constraints/lockConstraint.js"></script>
 	<script src="../js/stick.js"></script>
   <script src="../js/drawVerletStick.js"></script>
 	<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
