--- a/verlets/html/gameloop.html
+++ b/verlets/html/gameloop.html
@@ -10,9 +10,9 @@
 	<script src="../js/utils/prog.js"></script>
 	<script src="../js/utils/vector.js"></script>
 	<script src="../js/utils/math.js"></script>
-	<script src="../js/utils/circlePointDrawable.js"></script>
-	<script src="../js/particle.js"></script>
-	<script src="../js/listOfParticles.js"></script>
+	<script src="../js/utils/draw/circlePointDrawable.js"></script>
+	<script src="../js/factory/particle.js"></script>
+	<script src="../js/factory/listOfParticles.js"></script>
 	<script src="../js/game.js"></script>
 	<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
 </body>
