--- a/verlets/html/verletstick.html
+++ b/verlets/html/verletstick.html
@@ -10,13 +10,13 @@
 	<script src="../js/utils/prog.js"></script>
 	<script src="../js/utils/vector.js"></script>
 	<script src="../js/utils/math.js"></script>
-	<script src="../js/utils/circlePointDrawable.js"></script>
-	<script src="../js/utils/lineDrawable.js"></script>
-	<script src="../js/particle.js"></script>
-	<script src="../js/listOfParticles.js"></script>
+	<script src="../js/utils/draw/circlePointDrawable.js"></script>
+	<script src="../js/utils/draw/lineDrawable.js"></script>
+	<script src="../js/factory/particle.js"></script>
+	<script src="../js/factory/listOfParticles.js"></script>
 	<script src="../js/constraints/stickConstraints.js"></script>
 	<script src="../js/constraints/lockConstraint.js"></script>
-	<script src="../js/stick.js"></script>
+	<script src="../js/factory/stick.js"></script>
   <script src="../js/drawVerletStick.js"></script>
 	<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
 </body>
