--- a/verlets/html/level1.html
+++ b/verlets/html/level1.html
@@ -1,12 +1,40 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html>
+<head lang="en">
   <meta charset="UTF-8">
-  <title>Stick</title>
+
+  <title>Rope Surfer</title>
 </head>
+
 <body>
-<link rel="stylesheet" type="text/css" href="../css/main.css">
+
+<canvas id="background" style="position: absolute">
+  <img id="backgroundImage" src="../../html/elements/img/RopeSurferBackground.jpg">
+</canvas>
+
+<canvas id="main-canvas" style="position: absolute">Your browser doesn't support canvas!
+</canvas>
+
+<canvas id="initialFinalPoint" style="position: absolute">
+  <img id="Newton0" src="../../html/elements/img/NewtonFrame000.png">
+  <img id="trophy" src="../../html/elements/img/trophy.png">
+</canvas>
+
+
+<canvas id="layerA" style="position: absolute">
+  <img id="layerAbove" src="../../html/elements/img/singleLayerAbove.png">
+</canvas>
+
+<canvas id="layerB" style="position: absolute">
+  <img id="layerBelow" src="../../html/elements/img/singleLayerBelow.png">
+</canvas>
+
+<script src="../../js/backgroundBlue.js"></script>
+<script src="../../js/wave.js"></script>
+<script src="../../js/initialAndFinalPoint.js"></script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 <script src="../js/utils/prog.js"></script>
 <script src="../js/utils/vector.js"></script>
 <script src="../js/utils/math.js"></script>
@@ -14,10 +42,12 @@
 <script src="../js/utils/draw/lineDrawable.js"></script>
 <script src="../js/factory/particle.js"></script>
 <script src="../js/factory/listOfParticles.js"></script>
+<script src="../js/factory/listOfSticks.js"></script>
 <script src="../js/constraints/stickConstraints.js"></script>
 <script src="../js/constraints/lockConstraint.js"></script>
 <script src="../js/factory/stick.js"></script>
 <script src="../js/level1.js"></script>
-<canvas id="main-canvas" width=500 height=500>Your browser doesn't support canvas!</canvas>
+
 </body>
+
 </html>
