--- a/verlets/html/level1.html
+++ b/verlets/html/level1.html
@@ -38,13 +38,17 @@
 <script src="../js/utils/prog.js"></script>
 <script src="../js/utils/vector.js"></script>
 <script src="../js/utils/math.js"></script>
+<script src="../js/utils/line.js"></script>
 <script src="../js/utils/draw/circlePointDrawable.js"></script>
 <script src="../js/utils/draw/lineDrawable.js"></script>
+<script src="../js/utils/draw/rectangleDrawable.js"></script>
 <script src="../js/factory/particle.js"></script>
 <script src="../js/factory/listOfParticles.js"></script>
 <script src="../js/factory/listOfSticks.js"></script>
+<script src="../js/factory/rectangle.js"></script>
 <script src="../js/constraints/stickConstraints.js"></script>
 <script src="../js/constraints/lockConstraint.js"></script>
+<script src="../js/constraints/stayOutConstraint.js"></script>
 <script src="../js/factory/stick.js"></script>
 <script src="../js/level1.js"></script>
 
